# Biznes-Elektroniczny

./: .gitignore  Biznes Elektroniczny.sln  Database Backup.sql  README.md
Data/: Movies.json  combinations.csv  products.csv
PrestaShop/: robots.txt
PrestaShop/admin127wfzetf/import/: 20211126232750-kek.csv  20211127015554-categories.csv  20211127015727-categories.csv  20211127015914-categories.csv  20211127015950-products.csv  20211127021450-products.csv  20211127021820-products.csv  20211127022114-products.csv  20211127023107-products.csv  20211127030053-products.csv  20211127030522-products.csv  20211127031126-categories.csv  20211127031536-products.csv  20211127031943-products.csv  20211127033211-products.csv  20211127033924-products.csv  20211127034230-products.csv  20211127035236-categories.csv  20211127045919-products.csv  20211127050005-combinations.csv  20211127050614-products.csv  20211127051004-products.csv  20211127051844-combinations.csv  20211127052032-combinations.csv  20211127052608-products.csv  20211127052647-combinations.csv  20211127053247-combinations.csv  20211127053640-combinations.csv  20211127053757-combinations.csv  20211127054821-products.csv  20211127055955-products.csv  20211127060044-products.csv  20211127060132-combinations.csv  (+3 more)
Scraper/: CMakeLists.txt  Converter.cpp  Converter.h  Movie.h  Movies.json  Scraper.cpp  Scraper.h  Scraper.vcxproj  Scraper.vcxproj.filters  main.cpp  vcpkg.json
Scraper/Data/: Movies.json  products.csv
Selenium/: Selenium.sln
Selenium/Selenium/: Selenium.py  Selenium.pyproj
(+115 files in other folders)
